--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third">
         <h5>SUB UNIT 1</h5>
-        <img src="https://github.com/007cantCode/angelhack/blob/master/pi.jpg" style="width:100%" alt="machine 1">
+        <img src="pi.jpg" style="width:100%" alt="machine 1">
       </div>
       <div class="w3-twothird">
         <h5>Feeds</h5>
