--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>99</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>TEMPERATURE</h4>
+        <h4>PRESSURE</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -83,7 +83,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3 id="temp"></h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>HUMIDITY</h4>
+        <h4>TEMPERATURE</h4>
       </div>
     </div>
     <div class="w3-quarter">
