--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <h3>52</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>STATUS</h4>
+        <h4>TEMP</h4>
       </div>
     </div>
     <div class="w3-quarter">
