--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-red w3-padding-16">
         <div class="w3-left"><i class="fa fa-comment w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3>52</h3>
+          <h3 id="humidity"></h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>TEMP</h4>
+        <h4>HUMIDITY</h4>
       </div>
     </div>
     <div class="w3-quarter">
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-orange w3-text-white w3-padding-16">
         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3 id="humidity"></h3>
+          <h3>45</h3>
         </div>
         
         
