--- a/index.html
+++ b/index.html
@@ -174,19 +174,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
   <div class="w3-container">
     <h5>General Stats</h5>
-    <p>New Visitors</p>
+    <p>CPU Usage</p>
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-green" style="width:25%">+25%</div>
     </div>
 
-    <p>New Users</p>
+    <p>Memory Usage</p>
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-orange" style="width:50%">50%</div>
-    </div>
-
-    <p>Bounce Rate</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-red" style="width:75%">75%</div>
     </div>
   </div>
   <hr>
