--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 
 
-    var ref = firebase.database().ref();
+    var ref = firebase.database().ref().child();
 
     ref.on("value", function(snapshot) {
 
