--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-quarter">
       <div class="w3-container w3-blue w3-padding-16">
-        <div class="w3-left"><i class="fa fa-tachometer-alt"></i></div>
+        <div class="w3-left"><i class="fa fa-tachometer"></i></div>
         <div class="w3-right">
           <h3>99</h3>
         </div>
@@ -78,7 +78,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-quarter">
       <div class="w3-container w3-teal w3-padding-16">
-        <div class="w3-left"><i class="fa fa-temperature-high"></i></div>
+        <div class="w3-left"><i class="fa fa-temperature"></i></div>
         <div class="w3-right">
           <h3 id="temp"></h3>
         </div>
@@ -88,7 +88,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-quarter">
       <div class="w3-container w3-orange w3-text-white w3-padding-16">
-        <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
+        <div class="w3-left"><i class="fa fa-users"></i></div>
         <div class="w3-right">
           <h3>45</h3>
         </div>
