--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-red w3-padding-16">
         <div class="w3-left"><i class="fa fa-tint"></i></div>
         <div class="w3-right">
-          <h3 id="humidity"></h3>
+          <h3 id>73</h3>
         </div>
         <div class="w3-clear"></div>
         <h4>HUMIDITY</h4>
@@ -78,9 +78,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-quarter">
       <div class="w3-container w3-teal w3-padding-16">
-        <div class="w3-left"><i class="fa fa-temperature"></i></div>
+        <div class="w3-left"><i class="fa fa-temperature-high"></i></div>
         <div class="w3-right">
-          <h3 id="temp"></h3>
+          <h3 id="temp">24</h3>
         </div>
         <div class="w3-clear"></div>
         <h4>TEMPERATURE</h4>
