--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-quarter">
       <div class="w3-container w3-teal w3-padding-16">
-        <div class="w3-left"><i class="fa fa-temperature-high"></i></div>
+        <div class="w3-left"><i class="fa fa-thermometer"></i></div>
         <div class="w3-right">
           <h3 id="temp">24</h3>
         </div>
