--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-orange w3-text-white w3-padding-16">
         <div class="w3-left"><i class="fa fa-users"></i></div>
         <div class="w3-right">
-          <h3>EXCELLENT</h3>
+          <h3 id="status">GOOD</h3>
         </div>
         
         
